<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Profile"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView5"/>


    <TextView
            android:text="@string/member_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_member_level"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/member_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_member_total"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_member_level"
            />
    <TextView
            android:text="@string/member_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_member_balance"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_member_total"/>
    <TextView
            android:text="@string/member_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_member_amount"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_member_balance"/>
</androidx.constraintlayout.widget.ConstraintLayout>