<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <RelativeLayout android:id="@+id/shared_bar"
                    android:background="#F8EFE2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@+id/shared_bar_chaser_logo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentLeft="true"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:src="@mipmap/ic_launcher"/>
        <TextView android:id="@+id/shared_bar_app_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:textSize="30dp"
                  android:textStyle="bold"
                  android:textColor="#198585"
                  android:text="@string/app_name"/>
        <ImageView android:id="@+id/shared_bar_chaser_photo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:src="@mipmap/ic_launcher"/>

    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/activity_home_vp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/activity_home_tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/shared_bar"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/activity_home_tabs"
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextAppearance="@style/Body">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_home_tab_main" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_home_tab_news" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_home_tab_member" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>