<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:paddingBottom="1dp"
        android:background="#f4f4f2"
        android:layout_height="wrap_content">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/layout_news"
            android:layout_gravity="center_horizontal"
            android:padding="16dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <ImageView android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:src="@mipmap/ic_launcher"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView
                        android:id="@+id/item_news_list_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="18sp"
                        android:textColor="#198585"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/item_news_list_publishat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="0dp"
                        android:text="@string/news_descr"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/item_news_list_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:text="@string/news_descr"/>

        <TextView
                android:id="@+id/item_news_list_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:text="@string/fragment_news_date"/>

    </LinearLayout>
</LinearLayout>